Commit For Pk-982

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -650,7 +650,7 @@
     "SelectTenantAdministrator": "請選擇租戶管理者",
     "SelectContactTitle": "請選擇聯絡人稱呼",
     "Status": "狀態",
-    "Link": "連結",
+    "Link": "前台網址",
     "TenantName": "租戶名稱",
     "TotalOrder": "訂單總數",
     "WatingForShipment": "等待出貨",
@@ -971,7 +971,7 @@
     "TenantShortCodeRequired": "簡碼為必填",
     "TenantShortCode": "簡碼",
     "DomainIsRequired": "域名為必填",
-    "Domain": "域名",
+    "Domain": "後台網址",
     "InvalidUrl": "請堤估完整的URL,包含Http或Https.",
     "InvalidUrlWithProperty": "請提供用於{property}的完整URL,包含Http或Https.",
     "Pikachu:ProductCategoryAlreadyExists": "商品種類 {name} 已經存在.",
