Commit for Pk-937

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1123,6 +1123,7 @@
     "CreditCheckCode": "Credit Check Code",
     "OrderValidityUnit": "Order Validity Unit",
     "ValidatePeriod": "Validate Period",
-    "PaymentDeadline": "Payment Deadline"
+    "PaymentDeadline": "Payment Deadline",
+    "EnterItemStyleDescription": "Enter item style description"
   }
 }
