--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1201,6 +1201,14 @@
     "pieces": "件",
     "Monthly": "每月",
     "GroupBuy": "團購名稱",
-    "EnterItemStyleDescription": "請輸入商品規格描述"
+    "EnterItemStyleDescription": "請輸入商品規格描述",
+    
+      "Pikachu:ColorSchemeRequired": "需要顏色方案。",
+      "Pikachu:ProductDetailsDisplayMethodRequired": "需要產品詳細資訊顯示方式。",
+      "Pikachu:GroupBuyConditionRequired": "需要團購條件。",
+      "Pikachu:ExchangePolicyRequired": "需要換貨政策。",
+      "Pikachu:FreeShippingThresholdRequired": "需要免運門檻。"
+    
+
   }
 }
