Commit For PK-1052

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -322,7 +322,7 @@
     "BusinessInvoice": "Business Invoice",
     "SaveChanges": "Save Changes",
     "Telephone": "Telephone",
-    "OrderCreated": "Order Created",
+
     "Quantity": "Quantity",
     "UnitPrice": "Unit Price",
     "RecipientName": "Recipient Name",
@@ -1135,6 +1135,107 @@
     "PleaseSpecifyTheReasonForRejection": "Please specify the reason for rejection.",
     "RejectReason": "Reject Reason",
     "ViewReason": "View Reason",
-    "Pikachu:LogoIsRequired": "Logo is required"
+    "Pikachu:LogoIsRequired": "Logo is required",
+    "OrderHistory": "Order History",
+    "Action": "Action",
+    "ActionDetails": "Action Details",
+    "OrderCreatedTitle": "Order Created",
+    "OrderCreated": "Order {0} was created.",
+    "PaymentUpdatedTitle": "Payment Updated",
+    "PaymentUpdated": "Payment method changed from {0} to {1}.",
+    "MerchantTradeNoUpdatedTitle": "Merchant TradeNo Updated",
+    "MerchantTradeNoUpdated": "Merchant TradeNo changed from {0} to {1}.",
+    "OrderMergeTitle": "Order Merged",
+    "OrderMerge": "Merged orders: {0} into new order {1}.",
+    "OrderMergedToNewTitle": "Order Merged to New",
+    "OrderMergedToNew": "Order {0} was merged into {1} and closed.",
+    "OrderSplitTitle": "Order Split",
+    "OrderSplit": "Order {0} was split into new order {1}.",
+    "OrderSplitFromTitle": "Order Split From",
+    "OrderSplitFrom": "Order {0} was split, moving items to {1}.",
+    "RefundRequestedTitle": "Refund Requested",
+    "RefundRequested": "Refund requested for items. Refunded amount: {0}.",
+    "RefundOrderCreatedTitle": "Refund Order Created",
+    "RefundOrderCreated": "New refund order {0} created for refunded items from {1}.",
+    "StatusChangedTitle": "Status Changed",
+    "StatusChanged": "Order status changed from {0} to {1}.",
+    "RefundProcessedTitle": "Refund Processed",
+    "RefundProcessed": "A refund of {0} was processed for order {1}.",
+    "RefundAmountCreatedTitle": "Refund Order Created",
+    "RefundAmountCreated": "A new refund order {0} was created for refunded amount {1} from order {2}.",
+    "OrderUpdatedTitle": "Order Updated",
+    "OrderUpdated": "Order updated: {0}",
+
+    "RecipientNameChanged": "Recipient Name changed from '{0}' to '{1}'",
+    "RecipientPhoneChanged": "Recipient Phone changed from '{0}' to '{1}'",
+    "PostalCodeChanged": "Postal Code changed from '{0}' to '{1}'",
+    "DistrictChanged": "District changed from '{0}' to '{1}'",
+    "CityChanged": "City changed from '{0}' to '{1}'",
+    "RoadChanged": "Road changed from '{0}' to '{1}'",
+    "AddressDetailsChanged": "Address Details changed from '{0}' to '{1}'",
+    "OrderStatusChanged": "Order Status changed from '{0}' to '{1}'",
+    "StoreIdChanged": "Store ID changed from '{0}' to '{1}'",
+    "CVSStoreChanged": "CVS Store changed from '{0}' to '{1}'",
+    "ReturnStatusChangedTitle": "Return Status Changed",
+    "ReturnStatusChanged": "Return status changed from {0} to {1}.",
+    "RefundInitiatedTitle": "Refund Initiated",
+    "RefundInitiated": "Refund process started for order {0}.",
+    "OrderExchangedTitle": "Order Exchanged",
+    "OrderExchanged": "Order {0} marked as exchanged",
+    "OrderExchangeInitiatedTitle": "Order Exchange Initiated",
+    "OrderExchangeInitiated": "Order exchange initiated. Return status changed from {0} to {1}, and order status changed from {2} to {3}.",
+    "OrderReturnInitiatedTitle": "Order Return Initiated",
+    "OrderReturnInitiated": "Order return initiated. Return status changed from {0} to {1}, and order status changed from {2} to {3}.",
+    "OrderItemsUpdatedTitle": "Order Items Updated",
+    "OrderItemsUpdated": "Order items updated: {0}.",
+
+    "ItemQuantityChanged": "Item {0} quantity changed from {1} to {2}",
+    "ItemPriceChanged": "Item {0} price changed from {1} to {2}",
+    "ItemTotalAmountChanged": "Item {0} total amount changed from {1} to {2}",
+
+    "OrderCancelledTitle": "Order Cancelled",
+    "OrderCancelled": "Order was cancelled. Previous status: {0}.",
+    "InvoiceVoidedTitle": "Invoice Voided",
+    "InvoiceVoided": "Invoice was voided. Previous invoice status: {0}. Reason: {1}.",
+    "CreditNoteIssuedTitle": "Credit Note Issued",
+    "CreditNoteIssued": "Credit note issued. Previous invoice status: {0}. Reason: {1}.",
+    "ShippingDetailsUpdatedTitle": "Shipping Details Updated",
+    "ShippingDetailsUpdated": "Shipping details updated. Previous delivery method: {0}, new delivery method: {1}. Previous tracking number: {2}, new tracking number: {3}. Previous shipping status: {4}, new status: {5}.",
+    "OrderShippedTitle": "Order Shipped",
+    "OrderShipped": "Order marked as shipped. Previous shipping status: {0}, new status: {1}.",
+    "OrderClosedTitle": "Order Closed",
+    "OrderClosed": "Order was closed. Previous shipping status: {0}, new status: {1}.",
+    "OrderToBeShippedTitle": "Order Marked as 'To Be Shipped'",
+    "OrderToBeShipped": "Order marked as 'To Be Shipped'. Previous shipping status: {0}, new status: {1}.",
+    "PaymentProcessedTitle": "Payment Processed",
+    "PaymentProcessed": "Payment received. Previous shipping status: {0}, new status: {1}.",
+    "OrderCompletedTitle": "Order Completed",
+    "OrderCompleted": "Order marked as completed. Previous shipping status: {0}, new status: {1}.",
+    "LogisticStatusUpdatedTitle": "Logistic Status Updated",
+    "LogisticStatusUpdated": "Logistic status updated. Previous status: {0}, new status: {1}.",
+    "ShippingStatusChanged": "Shipping status changed from {0} to {1}.",
+    "OrderExpiredTitle": "Order Expired",
+    "OrderExpired": "Order expired due to non-payment. Previous order status: {0}, new status: {1}. Previous shipping status: {2}, new shipping status: {3}. Stock restored for {4} items.",
+    "InvoiceIssueFailedTitle": "Invoice Issuance Failed",
+    "InvoiceIssueFailed": "Invoice issuance failed. Reason: {0}.",
+    "InvoiceIssuedTitle": "Invoice Issued",
+    "InvoiceIssued": "Invoice issued successfully. Invoice No: {0}.",
+    "OrderShippingUpdatedTitle": "Order Shipping Updated",
+    "DeliveryMethodChanged": "Delivery method changed from {0} to {1}",
+    "DeliveryNumberChanged": "Delivery number changed from {0} to {1}",
+    "OrderShippingUpdated": "Shipping details updated: {0}. Updated by: {1}.",
+    "ShippingStatusChangedTitle": "Shipping Status Changed",
+    "OrderDeliveredTitle": "Order Delivered",
+    "OrderDelivered": "Order marked as delivered. Previous shipping status: {0}, new status: {1}.",
+    "OrderPickedUpTitle": "Order Picked Up",
+    "OrderPickedUp": "Order marked as picked up. Previous shipping status: {0}, new status: {1}.",
+
+    "OrderShippedWithShippingChange": "Order marked as shipped. Previous delivery status: {0}, new status: {1}. Previous shipping status: {2}, new shipping status: {3}.",
+    "OrderShippedWithoutShippingChange": "Order marked as shipped. Previous delivery status: {0}, new status: {1}.",
+    "GenerateDeliveryNumberLogTitle": "Delivery Number Generated",
+    "GenerateDeliveryNumberLog": "Delivery number generated. Delivery No: {0}."
+
+
+
   }
 }
