--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -316,7 +316,7 @@
     "Order": "訂單",
     "OrdersList": "訂單列表",
     "Orders": "總訂單",
-    "OrderCreated": "訂單成立",
+
     "OrderDate": "訂購日期",
     "OrderDelivery": "物流單",
     "OrderDetails": "訂單細項",
@@ -1211,6 +1211,103 @@
     "ThisFieldIsRequired": "此欄位為必填項目。",
     "PleaseSpecifyTheReasonForRejection": "請指定拒絕的原因。",
     "RejectReason": "拒絕原因",
-    "ViewReason": "查看原因"
+    "ViewReason": "查看原因",
+    "OrderHistory": "訂單歷程",
+    "Action": "操作",
+    "ActionDetails": "操作詳情",
+    "OrderCreatedTitle": "訂單已建立",
+
+    "OrderCreated": "Order {0} was created.",
+    "PaymentUpdatedTitle": "付款已更新",
+    "PaymentUpdated": "Payment method changed from {0} to {1}.",
+    "MerchantTradeNoUpdatedTitle": "商戶交易號已更新",
+    "MerchantTradeNoUpdated": "商戶交易號已從 {0} 更改為 {1}.",
+    "OrderMergeTitle": "訂單已合併",
+    "OrderMerge": "合併的訂單: {0} 轉為新訂單 {1}.",
+    "OrderMergedToNewTitle": "訂單已合併至新訂單",
+    "OrderMergedToNew": "訂單 {0} 已合併至 {1} 並已關閉.",
+    "OrderSplitTitle": "訂單已拆分",
+    "OrderSplit": "訂單 {0} 已拆分為新訂單 {1}。",
+    "OrderSplitFromTitle": "訂單已拆分",
+    "OrderSplitFrom": "訂單 {0} 已拆分，將商品移至 {1}。",
+    "RefundRequestedTitle": "已申請退款",
+    "RefundRequested": "已為商品申請退款。退款金額: {0}。",
+    "RefundOrderCreatedTitle": "退款訂單已建立",
+    "RefundOrderCreated": "新退款訂單 {0} 已為來自 {1} 的退款商品建立。",
+    "StatusChangedTitle": "狀態已更改",
+    "StatusChanged": "訂單狀態已從 {0} 更改為 {1}。",
+    "RefundProcessedTitle": "退款已處理",
+    "RefundProcessed": "已為訂單 {1} 處理退款 {0}。",
+    "RefundAmountCreatedTitle": "退款訂單已建立",
+    "RefundAmountCreated": "新的退款訂單 {0} 已建立，退款金額 {1}，來自訂單 {2}。",
+    "OrderUpdatedTitle": "訂單已更新",
+    "OrderUpdated": "訂單已更新: {0}",
+
+    "RecipientNameChanged": "收件人姓名從 '{0}' 更改為 '{1}'",
+    "RecipientPhoneChanged": "收件人電話從 '{0}' 更改為 '{1}'",
+    "PostalCodeChanged": "郵遞區號從 '{0}' 更改為 '{1}'",
+    "DistrictChanged": "區域從 '{0}' 更改為 '{1}'",
+    "CityChanged": "城市從 '{0}' 更改為 '{1}'",
+    "RoadChanged": "道路從 '{0}' 更改為 '{1}'",
+    "AddressDetailsChanged": "地址詳情從 '{0}' 更改為 '{1}'",
+    "OrderStatusChanged": "訂單狀態從 '{0}' 更改為 '{1}'",
+    "StoreIdChanged": "商店 ID 從 '{0}' 更改為 '{1}'",
+    "CVSStoreChanged": "超商門市從 '{0}' 更改為 '{1}'",
+    "ReturnStatusChangedTitle": "退貨狀態已更改",
+    "ReturnStatusChanged": "退貨狀態已從 {0} 更改為 {1}。",
+    "RefundInitiatedTitle": "退款已啟動",
+    "RefundInitiated": "訂單 {0} 的退款流程已啟動。",
+    "OrderExchangedTitle": "訂單已換貨",
+    "OrderExchanged": "訂單 {0} 已標記為換貨",
+    "OrderExchangeInitiatedTitle": "訂單換貨已啟動",
+    "OrderExchangeInitiated": "訂單換貨已啟動。退貨狀態從 {0} 更改為 {1}，訂單狀態從 {2} 更改為 {3}。",
+    "OrderReturnInitiatedTitle": "訂單退貨已啟動",
+    "OrderReturnInitiated": "訂單退貨已啟動。退貨狀態從 {0} 更改為 {1}，訂單狀態從 {2} 更改為 {3}。",
+    "OrderItemsUpdatedTitle": "訂單項目已更新",
+    "OrderItemsUpdated": "訂單項目已更新: {0}。",
+
+    "ItemQuantityChanged": "商品 {0} 數量從 {1} 更改為 {2}",
+    "ItemPriceChanged": "商品 {0} 價格從 {1} 更改為 {2}",
+    "ItemTotalAmountChanged": "商品 {0} 總金額從 {1} 更改為 {2}",
+    "OrderCancelledTitle": "訂單已取消",
+    "OrderCancelled": "訂單已取消。先前狀態: {0}。",
+    "InvoiceVoidedTitle": "發票已作廢",
+    "InvoiceVoided": "發票已作廢。先前的發票狀態: {0}。原因: {1}。",
+    "CreditNoteIssuedTitle": "已開立貸項通知單",
+    "CreditNoteIssued": "已開立貸項通知單。先前的發票狀態: {0}。原因: {1}。",
+    "ShippingDetailsUpdatedTitle": "運輸詳細信息已更新",
+    "ShippingDetailsUpdated": "運輸詳細信息已更新。先前的配送方式: {0}，新的配送方式: {1}。先前的追蹤號碼: {2}，新的追蹤號碼: {3}。先前的運輸狀態: {4}，新的狀態: {5}。",
+    "OrderShippedTitle": "訂單已發貨",
+    "OrderShipped": "訂單已標記為發貨。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "OrderClosedTitle": "訂單已關閉",
+    "OrderClosed": "訂單已關閉。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "OrderToBeShippedTitle": "訂單標記為'待發貨'",
+    "OrderToBeShipped": "訂單標記為'待發貨'。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "PaymentProcessedTitle": "付款已處理",
+    "PaymentProcessed": "已收到付款。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "OrderCompletedTitle": "訂單已完成",
+    "OrderCompleted": "訂單標記為已完成。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "LogisticStatusUpdatedTitle": "物流狀態已更新",
+    "LogisticStatusUpdated": "物流狀態已更新。先前狀態: {0}，新狀態: {1}。",
+    "ShippingStatusChanged": "運輸狀態從 {0} 更改為 {1}。",
+    "OrderExpiredTitle": "訂單已過期",
+    "OrderExpired": "訂單因未付款而過期。先前的訂單狀態: {0}，新的狀態: {1}。先前的運輸狀態: {2}，新的運輸狀態: {3}。已恢復 {4} 件商品的庫存。",
+    "InvoiceIssueFailedTitle": "發票開立失敗",
+    "InvoiceIssueFailed": "發票開立失敗。原因: {0}。",
+    "InvoiceIssuedTitle": "發票已開立",
+    "InvoiceIssued": "發票已成功開立。發票號碼: {0}。",
+    "OrderShippingUpdatedTitle": "訂單運輸已更新",
+    "DeliveryMethodChanged": "配送方式從 {0} 更改為 {1}",
+    "DeliveryNumberChanged": "配送編號從 {0} 更改為 {1}",
+    "OrderShippingUpdated": "運輸詳細信息已更新: {0}。更新者: {1}。",
+    "ShippingStatusChangedTitle": "運輸狀態已變更",
+    "OrderDeliveredTitle": "訂單已送達",
+    "OrderDelivered": "訂單已標記為送達。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "OrderPickedUpTitle": "訂單已取件",
+    "OrderPickedUp": "訂單已標記為取件。先前的運輸狀態: {0}，新的狀態: {1}。",
+    "OrderShippedWithShippingChange": "訂單已標記為發貨。先前的配送狀態: {0}，新狀態: {1}。先前的運輸狀態: {2}，新的運輸狀態: {3}。",
+    "OrderShippedWithoutShippingChange": "訂單已標記為發貨。先前的配送狀態: {0}，新狀態: {1}。",
+    "GenerateDeliveryNumberLogTitle": "已生成配送編號",
+    "GenerateDeliveryNumberLog": "已生成配送編號。配送號碼: {0}。"
   }
 }
