Fix for Pk-1061

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1165,6 +1165,16 @@
     "RefundAmountCreated": "A new refund order {0} was created for refunded amount {1} from order {2}.",
     "OrderUpdatedTitle": "Order Updated",
     "OrderUpdated": "Order updated: {0}",
+    "RecipientNameChangedTitle": "Order Recipient Name changed",
+    "RecipientPhoneChangedTitle": "Order Recipient Phone changed",
+    "PostalCodeChangedTitle": "Order Postal Code changed",
+    "DistrictChangedTitle": "Order District changed",
+    "CityChangedTitle": "Order City changed",
+    "RoadChangedTitle": "Order Road changed",
+    "AddressDetailsChangedTitle": "Order Address Details changed",
+    "OrderStatusChangedTitle": "Order Status changed",
+    "StoreIdChangedTitle": "Order Store ID changed",
+    "CVSStoreChangedTitle": "Order CVS Store changed",
 
     "RecipientNameChanged": "Recipient Name changed from '{0}' to '{1}'",
     "RecipientPhoneChanged": "Recipient Phone changed from '{0}' to '{1}'",
