--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1323,7 +1323,8 @@
     "CVSStoreChangedTitle": "訂單超商門市已更改",
     "ItemQuantityChangedTitle": "商品數量已更改",
     "ItemPriceChangedTitle": "商品價格已更改",
-    "ItemTotalAmountChangedTitle": "商品總金額已更改"
-
+    "ItemTotalAmountChangedTitle": "商品總金額已更改",
+    "PickingCompleted": "已撿貨",
+    "OrderCreated1": "訂單成立"
   }
 }
