--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1234,7 +1234,9 @@
     "InvoiceIssued": "Invoice issued successfully. Invoice No: {0}.",
     "OrderShippingUpdatedTitle": "Order Shipping Updated",
     "DeliveryMethodChanged": "Delivery method changed from {0} to {1}",
+    "DeliveryMethodChangedTitle": "Delivery method changed",
     "DeliveryNumberChanged": "Delivery number changed from {0} to {1}",
+    "DeliveryNumberChangedTitle": "Delivery number changed",
     "OrderShippingUpdated": "Shipping details updated: {0}. Updated by: {1}.",
     "ShippingStatusChangedTitle": "Shipping Status Changed",
     "OrderDeliveredTitle": "Order Delivered",
