--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1298,7 +1298,9 @@
     "InvoiceIssued": "發票已成功開立。發票號碼: {0}。",
     "OrderShippingUpdatedTitle": "訂單運輸已更新",
     "DeliveryMethodChanged": "配送方式從 {0} 更改為 {1}",
+    "DeliveryMethodChangedTitle": "配送方式從",
     "DeliveryNumberChanged": "配送編號從 {0} 更改為 {1}",
+    "DeliveryNumberChangedTitle": "配送編號從",
     "OrderShippingUpdated": "運輸詳細信息已更新: {0}。更新者: {1}。",
     "ShippingStatusChangedTitle": "運輸狀態已變更",
     "OrderDeliveredTitle": "訂單已送達",
