Commit for Pk-965

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1140,6 +1140,7 @@
     "Action": "Action",
     "ActionDetails": "Action Details",
     "OrderCreatedTitle": "Order Created",
+    "OrderCreatedLog": "Order Created",
     "OrderCreated": "Order {0} was created.",
     "PaymentUpdatedTitle": "Payment Updated",
     "PaymentUpdated": "Payment method changed from {0} to {1}.",
