--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1252,6 +1252,8 @@
     "GenerateDeliveryNumberLog": "Delivery number generated. Delivery No: {0}.",
     "MobileNumber": "Mobile Number",
     "PickingCompleted": "Picking Completed",
-    "OrderCreated1": "Order Created"
+    "OrderCreated1": "Order Created",
+    "OrderApplyForRefund": "Order {0} has applied for a refund.",
+    "OrderApplyForRefundTitle": "Refund Applied"
   }
 }
