#PK-1019 Automatic Email updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1262,6 +1262,7 @@
     "InvoiceTitle": "Invoice Title",
     "EmailSubject": "Email Subject",
     "SendDateRange": "Send Date Range",
-    "SendFrequency": "Send Frequency"
+    "SendFrequency": "Send Frequency",
+    "ReportNotification": "Report Notification"
   }
 }
