Commit For Pk-1016

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -380,9 +380,9 @@
     "TotalAmount": "Total Amount",
     "PaidAmount": "Paid Amount",
     "ReportUrl": "Report Url",
-    "OrderQuantityPaid/TotalOrderQuantity": "Order Quantity (Paid) / Total Order Quantity",
-    "SalesAmount/SalesAmountExcludingShipping": "Sales Amount / Sales Amount (Excluding Shipping Cost)",
-    "AmountReceived/AmountReceivedExcludingShipping": "Amount Received / Amount Received (Excluding Shipping Cost)",
+    "OrderQuantityPaid/TotalOrderQuantity": "Order Count (Paid) / Total Order Count",
+    "SalesAmount/SalesAmountExcludingShipping": "Sales Amount (Excluding Shipping) / Sales Amount (Including Shipping)",
+    "AmountReceived/AmountReceivedExcludingShipping": "Amount Received (Excluding Shipping) / Amount Received (Including Shipping)",
     "SalesAmountMinusShippingCosts": "Sales Amount (Minus Shipping Costs)",
     "BloggersShareProfit": "Bloggers Share Profit",
     "DownloadExcel": "Download Excel",
