--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -33,7 +33,7 @@
     "AllowShipToOverSea": "可寄送海外",
     "AllPayLogisticsID": "綠界物流號",
     "AmountReach": "當金額達到",
-    "AmountReceived/AmountReceivedExcludingShipping": "已收款項 / 已收款項 (不包含運費)",
+    "AmountReceived/AmountReceivedExcludingShipping": "已收款項 (不含運費) / 已收款項 (含運費)",
     "ApplyCondition": "套用條件",
     "ApplyRefund": "執行退款",
     "ApplyToAllGroupBuys": "套用至全部團購",
@@ -324,7 +324,7 @@
     "OrderInformation": "訂購人資訊",
     "OrderItems": "訂單項目",
     "OrderNo": "訂單號碼",
-    "OrderQuantityPaid/TotalOrderQuantity": "訂購數量 (已付款) / 加總數量",
+    "OrderQuantityPaid/TotalOrderQuantity": "訂單數量 (已付款) / 總訂單數量",
     "OrderShippingDetails": "訂單派送細節",
     "OrderStatus": "訂單狀態",
     "Orignal": "原訂單",
@@ -452,7 +452,7 @@
     "SaleablePreorderQuantity": "可銷售預購數量",
     "SaleableQuantity": "可銷售數量",
     "SalePrice": "售價",
-    "SalesAmount/SalesAmountExcludingShipping": "銷售額 / 銷售額 (不含運費)",
+    "SalesAmount/SalesAmountExcludingShipping": "銷售額 (不含運費) / 銷售額 (含運費)",
     "SalesAmountMinusShippingCosts": "銷售額 (不含運費)",
     "SalesURL": "銷售連結",
     "SalesURL1": "銷售連結1",
