#PK-1027 Enhance Enterprise Purchase Page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -579,7 +579,7 @@
     "ToBeShipped": "To Be Shipped",
     "Delivered": "Delivered",
     "Return": "Return",
-    "EnterpricePurchase": "Enterprice Purchase",
+    "EnterpricePurchase": "Enterprise Purchase",
     "TCatDelivery": "t-cat(delivery)",
     "TCatSevenToEleven": "t-cat(7-11)",
     "CashOnDelivery": "Cash On Delivery",
