Commit for Pk-974

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -123,6 +123,7 @@
     "Pikachu:ItemStyleKeyCannotBeDuplicate": "Item Style Key Can not be duplicate",
     "Pikachu:GroupBuyNameCannotBeNull": "Group Buy Name Can not be null",
     "Pikachu:ItemWithSameNameAlreadyExists": "Item with same Name already exists",
+    "Pikachu:GroupBuyWithSameNameAlreadyExists": "Group buy name already exists and cannot be duplicated.",
     "Pikachu:ItemDetailsCannotBeEmpty": "Item Details can not be empty",
     "Pikachu:ItemWithSKUAlreadyExists": "Item with same SKU already exists",
     "Pikachu:SKUForItemDetailsCannotBeNull": "SKU for Item Detail Cannot be null",
@@ -599,6 +600,8 @@
     "PrintedMaterials": "0014: Printed Materials",
     "Others": "0015: Others",
     "DeliveryTypeOthers": "Others",
+    "AllowShipToOuterIslands": "Allow Ship To Outer Islands",
+    " Others": "Others",
     "EditRole": "Edit Role",
     "EditUser": "Edit User",
     "Pikachu:MinimumAmountReachCannotBeEmpty": "Minimum Amount Reach Cannot be Empty.",
@@ -615,7 +618,7 @@
     "DisplayName:name": "Username",
     "DisplayName:UserName": "User name",
     "NameCannotBeEmpty": "Username cannot be empty.",
-    "ProductType": "Product Type",
+    "ProductType": "Product Type (Used for T-cat)",
     "SelectShippingMethod": "Select Shipping Method",
     "StoreName": "Store Name",
     "InvoiceNameDisplay": "Invoice Name Display",
