--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -387,11 +387,12 @@
     "Pikachu:FreebieWithSameNameAlreadyExists": "商品名稱不能重複",
     "Pikachu:GroupBuyModuleCannotBeEmpty": "團購模組不能為空",
     "Pikachu:GroupBuyNameCannotBeNull": "團購名稱不能為空值",
-    "Pikachu:GroupBuyShortCodeCannotBeNull": "團購短碼不能為空",
+    "Pikachu:GroupBuyShortCodeCannotBeNull": "轉址編號為必填",
     "Pikachu:InvalidItemName": "商品名稱無效",
     "Pikachu:ItemDetailsCannotBeEmpty": "商品細節不能為空",
     "Pikachu:ItemNameCannotBeNull": "商品名稱不能為空值",
     "Pikachu:ItemWithSameNameAlreadyExists": "商品名稱不能重複",
+    "Pikachu:GroupBuyWithSameNameAlreadyExists": "團購名稱已存在，無法重複新增",
     "Pikachu:ItemWithSKUAlreadyExists": "商品SKU不能重複",
     "Pikachu:ItemStyleKeyCannotBeNull": "商品樣式鍵不能為空",
     "Pikachu:ItemStyleKeyCannotBeDuplicate": "商品樣式名稱不可重複",
@@ -631,7 +632,9 @@
     "PrintedMaterials": "0014：印刷品",
     "Others": "0015：其他",
     "DeliveryTypeOthers": "其他",
-    "ProductType": "產品類別",
+    " Others": "其他",
+    "AllowShipToOuterIslands": "可寄送台灣離島",
+    "ProductType": "產品類別 (用於黑貓物流)",
     "SelectShippingMethod": "請選擇運送方式",
     "StoreName": "商店名稱",
     "InvoiceNameDisplay": "發票抬頭顯示",
@@ -1204,8 +1207,8 @@
     "EnterItemStyleDescription": "請輸入商品規格描述",
 
     "Pikachu:ColorSchemeRequired": "需要顏色方案。",
-    "Pikachu:ProductDetailsDisplayMethodRequired": "需要產品詳細資訊顯示方式。",
-    "Pikachu:GroupBuyConditionRequired": "需要團購條件。",
+    "Pikachu:ProductDetailsDisplayMethodRequired": "商品內容顯示方式為必填",
+    "Pikachu:GroupBuyConditionRequired": "團購內容為必填",
     "Pikachu:ExchangePolicyRequired": "需要換貨政策。",
     "Pikachu:FreeShippingThresholdRequired": "需要免運門檻。",
     "ThisFieldIsRequired": "此欄位為必填項目。",
