--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1342,6 +1342,7 @@
     "EmailSubject": "電子郵件主旨",
     "SendDateRange": "發送日期範圍",
     "SendFrequency": "發送頻率",
-    "Youcannotsplittheorder": "所選商品和數量與原訂單一致，無法進行拆分"
+    "Youcannotsplittheorder": "所選商品和數量與原訂單一致，無法進行拆分",
+    "Pikachu:ItemDescriptionIsRequired": "商品敘述不能為空值"
   }
 }
