Commit For Pk-1015

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -525,8 +525,8 @@
     "Threshold": "免運門檻",
     "TimeLimitPeriod": "銷售區間",
     "Total": "總金額",
-    "TotalAmount": "總金額",
-    "TotalQuantity": "加總數量",
+    "TotalAmount": "銷售額 (含運費)",
+    "TotalQuantity": "訂購數量",
     "TradeDescription": "交易訊息",
     "TradeName": "交易名稱",
     "TurnItemOn": "開啟商品",
